--- a/event_log_track_auth/event_log_track_auth.info.yml
+++ b/event_log_track_auth/event_log_track_auth.info.yml
@@ -2,6 +2,6 @@ name: Events Log Track User Authentication
 description: 'Logs user authentication (login logout and request password).'
 type: module
 dependencies:
-  - event_log_track
+  - event_log_track:event_log_track
 core: '8.x'
 package: Statistics
