--- a/event_log_track_menu/event_log_track_menu.info.yml
+++ b/event_log_track_menu/event_log_track_menu.info.yml
@@ -2,6 +2,6 @@ name: Events Log Track Menu
 description: 'Logs menu CUD events performed by the user.'
 type: module
 dependencies:
-  - event_log_track
+  - event_log_track:event_log_track
 core: '8.x'
 package: Statistics
