--- a/event_log_track_node/event_log_track_node.info.yml
+++ b/event_log_track_node/event_log_track_node.info.yml
@@ -2,6 +2,6 @@ name: Events Log Track Node
 description: 'Logs node CUD events performed by the user.'
 type: module
 dependencies:
-  - event_log_track
+  - event_log_track:event_log_track
 core: '8.x'
 package: Statistics
