--- a/event_log_track.info.yml
+++ b/event_log_track.info.yml
@@ -1,5 +1,5 @@
 name: Events Log Track
 description: 'Logs general CUD events performed by the user (using the forms) on the website.'
 type: module
-core: '8.x'
+core_version_requirement: ^8 || ^9
 package: Statistics
