--- a/event_log_track_auth/event_log_track_auth.info.yml
+++ b/event_log_track_auth/event_log_track_auth.info.yml
@@ -3,5 +3,5 @@ description: 'Logs user authentication (login logout and request password).'
 type: module
 dependencies:
   - event_log_track:event_log_track
-core: '8.x'
+core_version_requirement: ^8 || ^9
 package: Statistics
