--- a/event_log_track_media/event_log_track_media.info.yml
+++ b/event_log_track_media/event_log_track_media.info.yml
@@ -4,5 +4,5 @@ type: module
 dependencies:
   - event_log_track:event_log_track
   - media:media
-core: '8.x'
+core_version_requirement: ^8 || ^9
 package: Statistics
