--- a/event_log_track_workflows/event_log_track_workflows.info.yml
+++ b/event_log_track_workflows/event_log_track_workflows.info.yml
@@ -4,5 +4,5 @@ type: module
 dependencies:
   - event_log_track:event_log_track
   - workflows:workflows
-core: '8.x'
+core_version_requirement: ^8 || ^9
 package: Statistics
